# mol2lewis

./: .gitignore  LICENSE  README.md  mol2lewis.sty  pyproject.toml
.github/workflows/: ci.yml  publish.yml
mol2lewis/: __init__.py  core.py  formatting.py  geometry.py
tests/: test_api_contract.py  test_aromatic_phantom_fix.py  test_metadata.py  test_output_alignment.py
