[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mol2lewis"
version = "0.1.0"
description = "Convert SMILES to ChemFig LaTeX with Lewis structures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["chemistry", "smiles", "chemfig", "latex", "lewis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "rdkit>=2023.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mol2lewis"
Repository = "https://github.com/yourusername/mol2lewis"
Issues = "https://github.com/yourusername/mol2lewis/issues"

[tool.setuptools]
packages = ["mol2lewis"]

[tool.setuptools.package-data]
mol2lewis = ["*.py"]