[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mol2lewis"
version = "1.0.3"
description = "Convert chemical identifiers (SMILES, CID, InChI, formulas) to ChemFig LaTeX with Lewis structures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Guillaume Martrou", email = "guillaume.martrou@gmail.com"},
]
maintainers = [
    {name = "Guillaume Martrou", email = "guillaume.martrou@gmail.com"},
]
keywords = ["chemistry", "smiles", "chemfig", "latex", "lewis", "pubchem", "inchi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "rdkit>=2018.09.1",
    "mol2chemfigPy3>=1.5.0",
    "pubchempy>=1.0.0",
]

[project.urls]
Homepage = "https://https://github.com/mmartrou/mol2lewis"
Repository = "https://github.com/mmartrou/mol2lewis"
Documentation = "https://https://github.com/mmartrou/mol2lewis/blob/master/README.md"

[tool.setuptools]
packages = ["mol2lewis"]

[tool.setuptools.package-data]
mol2lewis = ["*.py"]